--- a/css/board.css
+++ b/css/board.css
@@ -27,6 +27,7 @@
     display: flex;
     flex-direction: row;
     gap: 32px;
+    position: relative;
 }
 
 .search-wrapper-board {
@@ -90,6 +91,13 @@
     gap: 4px;
     border: 1px;
     cursor: pointer;
+}
+
+.no-results-div {
+    position: absolute;
+    top: 50px;
+    left: 15px;
+    color: var(--warning-color);
 }
 
 .add-task-board h2 {
@@ -176,6 +184,7 @@
 }
 
 .columns {
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -183,6 +192,8 @@
 
 .columns-highlight {
     background-color: rgba(0, 0, 0, 0.1);
+    border: dashed 1px var(--icons);
+    border-radius: 10px 10px 24px 24px;    
 }
 
 .empty-task {
@@ -212,6 +223,11 @@
     padding: 16px;
     background-color: var(--white);
     cursor: pointer;
+    box-shadow: 0 0 14px 3px rgba(0, 0, 0, 0.08);
+}
+
+.task-main:active {
+  transform: rotate(5deg);
 }
 
 .category-board {
