--- a/css/board_mobile.css
+++ b/css/board_mobile.css
@@ -104,8 +104,9 @@
 
 .move-task-cnt {
     position: absolute;
-    top: 0;
-    left: 0;
+    /* top: 0; */
+    /* left: 140px; */
+    transform: translateX(-50%);
 }
 
 .move-task-overlay {
@@ -113,7 +114,7 @@
     flex-direction: column;
     justify-content: center;
     background-color: var(--primary-color);
-    border-radius: 0px 20px 20px 20px;
+    border-radius: 20px 0px 20px 20px;
     padding: 8px;
 
     & h3 {
