Set height to 100% for open-task-overlay in board.css

--- a/css/board.css
+++ b/css/board.css
@@ -322,6 +322,7 @@
 
 .open-task-overlay {
     width: 640px;
+    height: 100%;
     max-height: 850px;
     padding: 48px 40px;
     background-color: var(--white);
